got end-to-end binary sql sorter and loader working

--- a/database/load_qualities.ipynb
+++ b/database/load_qualities.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "import numpy as np\n",
     "\n",
     "from config import get_sessionmaker\n",
-    "from models import Page, PageQuality"
+    "from models import PageTalk, PageQuality"
    ]
   },
   {
@@ -52,49 +52,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "500000 added\n",
-      "1000000 added\n",
-      "1500000 added\n",
-      "2000000 added\n",
-      "2500000 added\n",
-      "3000000 added\n",
-      "3500000 added\n",
-      "4000000 added\n",
-      "4500000 added\n",
-      "5000000 added\n",
-      "5500000 added\n",
-      "6000000 added\n"
-     ]
-    }
-   ],
    "source": [
-    "pages_added = 0\n",
-    "for row in np_array:\n",
-    "    title = str(row[1])\n",
-    "    if len(title) > 200:\n",
-    "        continue # ignore titles > 200 chars\n",
-    "    page = Page(\n",
-    "        page_id = int(row[0]),\n",
-    "        page_title = title,\n",
-    "        )\n",
-    "    s.add(page)\n",
-    "    pages_added += 1\n",
-    "    if pages_added % 500000 == 0:\n",
-    "        s.commit()\n",
-    "        print(f\"{pages_added} added\")"
-   ]
-  },
-  {
-   "source": [
-    "# Load Page Qualities"
+    "# Load Page Qualities\n",
+    "\n",
+    "522137 added\n",
+    "3691 skipped"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -105,12 +67,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorylinks_array = np.load('categorylinks.npy', allow_pickle=True)\n"
+    "categorylinks_array = np.load('data/categorylinks.npy', allow_pickle=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +102,16 @@
     "            if num_items % 250000 == 0:\n",
     "                print(f\"scanned {num_items} items\")\n",
     "                print(f\"{num_unique_items} unique items\")\n",
+    "    print(\"Total:\")\n",
+    "    print(f\"scanned {num_items} items\")\n",
+    "    print(f\"{num_unique_items} unique items\")  \n",
     "        \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +133,10 @@
       "scanned 1750000 items\n",
       "467635 unique items\n",
       "scanned 2000000 items\n",
-      "538176 unique items\n"
+      "538176 unique items\n",
+      "Total:\n",
+      "scanned 2021266 items\n",
+      "544338 unique items\n"
      ]
     }
    ],
@@ -180,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "544338\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -222,16 +197,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 8
     }
    ],
    "source": [
+    "print(len(qualities))\n",
     "qualities[:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "525828\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -285,36 +268,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 11
     }
    ],
    "source": [
+    "print(len(unique_qualities))\n",
     "unique_qualities[:20]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "525828"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 18
-    }
-   ],
-   "source": [
-    "len(unique_qualities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,156 +287,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 added\n",
+      "50000 added\n",
+      "226 skipped\n",
+      "100000 added\n",
+      "502 skipped\n",
+      "150000 added\n",
+      "770 skipped\n",
+      "193652 added\n",
       "1000 skipped\n",
-      "2 added\n",
+      "200000 added\n",
+      "1027 skipped\n",
+      "250000 added\n",
+      "1404 skipped\n",
+      "300000 added\n",
+      "1835 skipped\n",
+      "320283 added\n",
       "2000 skipped\n",
-      "2 added\n",
+      "350000 added\n",
+      "2286 skipped\n",
+      "400000 added\n",
+      "2716 skipped\n",
+      "435231 added\n",
       "3000 skipped\n",
-      "2 added\n",
-      "4000 skipped\n",
-      "2 added\n",
-      "5000 skipped\n",
-      "2 added\n",
-      "6000 skipped\n",
-      "2 added\n",
-      "7000 skipped\n",
-      "2 added\n",
-      "8000 skipped\n",
-      "2 added\n",
-      "9000 skipped\n",
-      "2 added\n",
-      "10000 skipped\n",
-      "2 added\n",
-      "11000 skipped\n",
-      "2 added\n",
-      "12000 skipped\n",
-      "2 added\n",
-      "13000 skipped\n",
-      "2 added\n",
-      "14000 skipped\n",
-      "2 added\n",
-      "15000 skipped\n",
-      "2 added\n",
-      "16000 skipped\n",
-      "2 added\n",
-      "17000 skipped\n",
-      "2 added\n",
-      "18000 skipped\n",
-      "2 added\n",
-      "19000 skipped\n",
-      "2 added\n",
-      "20000 skipped\n",
-      "2 added\n",
-      "21000 skipped\n",
-      "2 added\n",
-      "22000 skipped\n",
-      "2 added\n",
-      "23000 skipped\n",
-      "2 added\n",
-      "24000 skipped\n",
-      "2 added\n",
-      "25000 skipped\n",
-      "2 added\n",
-      "26000 skipped\n",
-      "2 added\n",
-      "27000 skipped\n",
-      "2 added\n",
-      "28000 skipped\n",
-      "2 added\n",
-      "29000 skipped\n",
-      "2 added\n",
-      "30000 skipped\n",
-      "2 added\n",
-      "31000 skipped\n",
-      "2 added\n",
-      "32000 skipped\n",
-      "2 added\n",
-      "33000 skipped\n",
-      "2 added\n",
-      "34000 skipped\n",
-      "2 added\n",
-      "35000 skipped\n",
-      "2 added\n",
-      "36000 skipped\n",
-      "3 added\n",
-      "37000 skipped\n",
-      "3 added\n",
-      "38000 skipped\n",
-      "3 added\n",
-      "39000 skipped\n",
-      "3 added\n",
-      "40000 skipped\n",
-      "3 added\n",
-      "41000 skipped\n",
-      "3 added\n",
-      "42000 skipped\n",
-      "3 added\n",
-      "43000 skipped\n",
-      "3 added\n",
-      "44000 skipped\n",
-      "3 added\n",
-      "45000 skipped\n",
-      "3 added\n",
-      "46000 skipped\n",
-      "3 added\n",
-      "47000 skipped\n",
-      "3 added\n",
-      "48000 skipped\n",
-      "3 added\n",
-      "49000 skipped\n",
-      "3 added\n",
-      "50000 skipped\n",
-      "3 added\n",
-      "51000 skipped\n",
-      "3 added\n",
-      "52000 skipped\n",
-      "3 added\n",
-      "53000 skipped\n",
-      "3 added\n",
-      "54000 skipped\n",
-      "3 added\n",
-      "55000 skipped\n",
-      "3 added\n",
-      "56000 skipped\n",
-      "3 added\n",
-      "57000 skipped\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-88f340e173bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mqualities_skipped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0munique_qualities\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mPage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpage_id\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0mqualities_skipped\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/orm/query.py\u001b[0m in \u001b[0;36mfirst\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2748\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2749\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2750\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlimit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2751\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2752\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mone_or_none\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/orm/query.py\u001b[0m in \u001b[0;36m_iter\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   2832\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2833\u001b[0m         \u001b[0mstatement\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_statement_20\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2834\u001b[0;31m         result = self.session.execute(\n\u001b[0m\u001b[1;32m   2835\u001b[0m             \u001b[0mstatement\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2836\u001b[0m             \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/orm/session.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, statement, params, execution_options, bind_arguments, _parent_execute_state, _add_event, **kw)\u001b[0m\n\u001b[1;32m   1678\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1679\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcompile_state_cls\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1680\u001b[0;31m             result = compile_state_cls.orm_setup_cursor_result(\n\u001b[0m\u001b[1;32m   1681\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1682\u001b[0m                 \u001b[0mstatement\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/orm/context.py\u001b[0m in \u001b[0;36morm_setup_cursor_result\u001b[0;34m(cls, session, statement, params, execution_options, bind_arguments, result)\u001b[0m\n\u001b[1;32m    316\u001b[0m             \u001b[0mbind_arguments\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    317\u001b[0m         )\n\u001b[0;32m--> 318\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mloading\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minstances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquerycontext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    319\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/orm/loading.py\u001b[0m in \u001b[0;36minstances\u001b[0;34m(cursor, context)\u001b[0m\n\u001b[1;32m     93\u001b[0m         )\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m     row_metadata = SimpleResultMetaData(\n\u001b[0m\u001b[1;32m     96\u001b[0m         \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0mextra\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/engine/result.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, keys, extra, _processors, _tuplefilter, _translated_indexes, _unique_filters)\u001b[0m\n\u001b[1;32m    179\u001b[0m             ]\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 181\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_keymap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecs_names\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_processors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_processors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Developer/active/wikimap/env/lib/python3.8/site-packages/sqlalchemy/engine/result.py\u001b[0m in \u001b[0;36m<dictcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    179\u001b[0m             ]\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 181\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_keymap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrecs_names\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_processors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_processors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "450000 added\n",
+      "3069 skipped\n",
+      "500000 added\n",
+      "3537 skipped\n",
+      "FINAL:\n",
+      "522137 added\n",
+      "3691 skipped\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "total_qualities = len(unique_qualities)\n",
     "qualities_added = 0\n",
     "qualities_skipped = 0\n",
-    "for row in unique_qualities:\n",
-    "    result = s.query(Page).filter(Page.page_id==row[0]).first()\n",
+    "skipped_qualities = []\n",
+    "for i, row in enumerate(unique_qualities):\n",
+    "    result = s.query(PageTalk).filter(PageTalk.page_id==row[0]).first()\n",
     "    if result is None:\n",
     "        qualities_skipped += 1\n",
-    "        if qualities_skipped % 20000 == 0:\n",
+    "        skipped_qualities.append(row)\n",
+    "        if qualities_skipped % 1000 == 0:\n",
     "            print(f\"{qualities_added} added\")\n",
     "            print(f\"{qualities_skipped} skipped\")\n",
     "        continue\n",
@@ -482,7 +348,9 @@
     "        )\n",
     "    s.add(quality)\n",
     "    qualities_added += 1\n",
-    "    if qualities_added % 1000 == 0:\n",
+    "    if qualities_added % 50000 == 0 or i == total_qualities - 1:\n",
+    "        if i == total_qualities - 1:\n",
+    "            print(\"FINAL:\")\n",
     "        s.commit()\n",
     "        print(f\"{qualities_added} added\")\n",
     "        print(f\"{qualities_skipped} skipped\")"
@@ -490,31 +358,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "1192060"
+       "<models.Page at 0x7fc924cc4af0>"
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 57
     }
    ],
    "source": [
-    "s.query(Page).filter(Page.page_title==\"Anarky\").first().page_id"
+    "s.query(Page).filter(Page.page_id==12).first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for "
+    "skipped_qualities_np = np.array(skipped_qualities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"data/3691_skipped_qualities_compare_with_pageids\", skipped_qualities_np)"
    ]
   }
  ]
