--- a/database/load_pages.ipynb
+++ b/database/load_pages.ipynb
@@ -37,7 +37,7 @@
     "import numpy as np\n",
     "\n",
     "from config import get_sessionmaker\n",
-    "from models import Page"
+    "from models import Page, PageTalk"
    ]
   },
   {
@@ -53,7 +53,8 @@
   },
   {
    "source": [
-    "# Load Pages"
+    "# Load Pages\n",
+    "- 6,301,566 total pages"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -64,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np_array = np.load('ns0_pages.npy')"
+    "pages_array = np.load('data/ns0_pages.npy')"
    ]
   },
   {
@@ -77,25 +78,48 @@
      "name": "stdout",
      "text": [
       "500000 added\n",
+      "0 skipped\n",
       "1000000 added\n",
+      "0 skipped\n",
       "1500000 added\n",
+      "0 skipped\n",
       "2000000 added\n",
+      "0 skipped\n",
       "2500000 added\n",
+      "0 skipped\n",
       "3000000 added\n",
+      "0 skipped\n",
       "3500000 added\n",
+      "0 skipped\n",
       "4000000 added\n",
+      "0 skipped\n",
       "4500000 added\n",
+      "0 skipped\n",
       "5000000 added\n",
+      "0 skipped\n",
       "5500000 added\n",
-      "6000000 added\n"
+      "0 skipped\n",
+      "6000000 added\n",
+      "1 skipped\n",
+      "FINAL:\n",
+      "6301565 added\n",
+      "1 skipped\n",
+      "[array([b'61779921',\n",
+      "       b'Cneoridium_dumosum_(Nuttall)_Hooker_F._Collected_March_26,_1960,_at_an_Elevation_of_about_1450_Meters_on_Cerro_Quemaz\\xc3\\xb3n,_15_Miles_South_of_Bah\\xc3\\xada_de_Los_Angeles,_Baja_California,_M\\xc3\\xa9xico,_Apparently_for_a_Southeastward_Range_Extension_of_Some_140_Miles'],\n",
+      "      dtype='|S253')]\n"
      ]
     }
    ],
    "source": [
+    "total_pages = len(pages_array)\n",
     "pages_added = 0\n",
-    "for row in np_array:\n",
+    "pages_skipped = 0\n",
+    "skipped_pages = []\n",
+    "for i, row in enumerate(pages_array):\n",
     "    title = row[1].decode(\"utf-8\")\n",
     "    if len(title) > 200:\n",
+    "        pages_skipped += 1\n",
+    "        skipped_pages.append(row)\n",
     "        continue # ignore titles > 200 chars\n",
     "    page = Page(\n",
     "        page_id = int(row[0]),\n",
@@ -103,10 +127,404 @@
     "        )\n",
     "    s.add(page)\n",
     "    pages_added += 1\n",
-    "    if pages_added % 500000 == 0:\n",
+    "    if pages_added % 500000 == 0 or i == total_pages - 1:\n",
     "        s.commit()\n",
-    "        print(f\"{pages_added} added\")"
+    "        if i == total_pages - 1:\n",
+    "            print(\"FINAL:\")\n",
+    "        print(f\"{pages_added} added\")\n",
+    "        print(f\"{pages_skipped} skipped\")\n",
+    "print(skipped_pages)"
    ]
+  },
+  {
+   "source": [
+    "# Load PageTalk\n",
+    "\n",
+    "\n",
+    "6132268 added\n",
+    "911509 skipped\n",
+    "\n",
+    "vs without last commits\n",
+    "\n",
+    "5861667 added\n",
+    "1150000 skipped\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "talk_array = np.load(\"data/ns1_pages.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.rollback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "50000 added\n",
+      "8033 skipped\n",
+      "100000 added\n",
+      "17754 skipped\n",
+      "150000 added\n",
+      "26702 skipped\n",
+      "200000 added\n",
+      "35302 skipped\n",
+      "250000 added\n",
+      "43269 skipped\n",
+      "297873 added\n",
+      "50000 skipped\n",
+      "300000 added\n",
+      "50306 skipped\n",
+      "350000 added\n",
+      "58108 skipped\n",
+      "400000 added\n",
+      "63353 skipped\n",
+      "450000 added\n",
+      "65482 skipped\n",
+      "500000 added\n",
+      "69525 skipped\n",
+      "550000 added\n",
+      "74334 skipped\n",
+      "600000 added\n",
+      "82252 skipped\n",
+      "650000 added\n",
+      "88006 skipped\n",
+      "700000 added\n",
+      "94085 skipped\n",
+      "750000 added\n",
+      "99313 skipped\n",
+      "760968 added\n",
+      "100000 skipped\n",
+      "800000 added\n",
+      "104193 skipped\n",
+      "850000 added\n",
+      "108761 skipped\n",
+      "900000 added\n",
+      "113738 skipped\n",
+      "950000 added\n",
+      "116892 skipped\n",
+      "1000000 added\n",
+      "119742 skipped\n",
+      "1050000 added\n",
+      "125131 skipped\n",
+      "1100000 added\n",
+      "130615 skipped\n",
+      "1150000 added\n",
+      "135556 skipped\n",
+      "1200000 added\n",
+      "139449 skipped\n",
+      "1250000 added\n",
+      "144264 skipped\n",
+      "1300000 added\n",
+      "149725 skipped\n",
+      "1301389 added\n",
+      "150000 skipped\n",
+      "1350000 added\n",
+      "156240 skipped\n",
+      "1400000 added\n",
+      "161454 skipped\n",
+      "1450000 added\n",
+      "166803 skipped\n",
+      "1500000 added\n",
+      "170980 skipped\n",
+      "1550000 added\n",
+      "174713 skipped\n",
+      "1600000 added\n",
+      "178852 skipped\n",
+      "1650000 added\n",
+      "195146 skipped\n",
+      "1672495 added\n",
+      "200000 skipped\n",
+      "1700000 added\n",
+      "205051 skipped\n",
+      "1750000 added\n",
+      "209860 skipped\n",
+      "1800000 added\n",
+      "215593 skipped\n",
+      "1850000 added\n",
+      "220463 skipped\n",
+      "1900000 added\n",
+      "224510 skipped\n",
+      "1950000 added\n",
+      "231394 skipped\n",
+      "2000000 added\n",
+      "236700 skipped\n",
+      "2050000 added\n",
+      "240418 skipped\n",
+      "2100000 added\n",
+      "244492 skipped\n",
+      "2150000 added\n",
+      "249503 skipped\n",
+      "2157221 added\n",
+      "250000 skipped\n",
+      "2200000 added\n",
+      "255613 skipped\n",
+      "2250000 added\n",
+      "261022 skipped\n",
+      "2300000 added\n",
+      "267185 skipped\n",
+      "2350000 added\n",
+      "270340 skipped\n",
+      "2400000 added\n",
+      "280387 skipped\n",
+      "2450000 added\n",
+      "287156 skipped\n",
+      "2500000 added\n",
+      "293732 skipped\n",
+      "2546115 added\n",
+      "300000 skipped\n",
+      "2550000 added\n",
+      "300701 skipped\n",
+      "2600000 added\n",
+      "307930 skipped\n",
+      "2650000 added\n",
+      "314517 skipped\n",
+      "2700000 added\n",
+      "321356 skipped\n",
+      "2750000 added\n",
+      "326918 skipped\n",
+      "2800000 added\n",
+      "335596 skipped\n",
+      "2850000 added\n",
+      "345196 skipped\n",
+      "2879606 added\n",
+      "350000 skipped\n",
+      "2900000 added\n",
+      "353441 skipped\n",
+      "2950000 added\n",
+      "357986 skipped\n",
+      "3000000 added\n",
+      "364447 skipped\n",
+      "3050000 added\n",
+      "375461 skipped\n",
+      "3100000 added\n",
+      "382812 skipped\n",
+      "3150000 added\n",
+      "394911 skipped\n",
+      "3170612 added\n",
+      "400000 skipped\n",
+      "3200000 added\n",
+      "407745 skipped\n",
+      "3250000 added\n",
+      "417355 skipped\n",
+      "3300000 added\n",
+      "425951 skipped\n",
+      "3350000 added\n",
+      "432515 skipped\n",
+      "3400000 added\n",
+      "439016 skipped\n",
+      "3438450 added\n",
+      "450000 skipped\n",
+      "3450000 added\n",
+      "454292 skipped\n",
+      "3500000 added\n",
+      "460922 skipped\n",
+      "3550000 added\n",
+      "468872 skipped\n",
+      "3600000 added\n",
+      "473241 skipped\n",
+      "3650000 added\n",
+      "481680 skipped\n",
+      "3700000 added\n",
+      "486174 skipped\n",
+      "3750000 added\n",
+      "493093 skipped\n",
+      "3776145 added\n",
+      "500000 skipped\n",
+      "3800000 added\n",
+      "503286 skipped\n",
+      "3850000 added\n",
+      "509608 skipped\n",
+      "3900000 added\n",
+      "525902 skipped\n",
+      "3950000 added\n",
+      "531599 skipped\n",
+      "4000000 added\n",
+      "541558 skipped\n",
+      "4044142 added\n",
+      "550000 skipped\n",
+      "4050000 added\n",
+      "550808 skipped\n",
+      "4100000 added\n",
+      "561271 skipped\n",
+      "4150000 added\n",
+      "568624 skipped\n",
+      "4200000 added\n",
+      "575073 skipped\n",
+      "4250000 added\n",
+      "580334 skipped\n",
+      "4300000 added\n",
+      "587700 skipped\n",
+      "4350000 added\n",
+      "596278 skipped\n",
+      "4393838 added\n",
+      "600000 skipped\n",
+      "4400000 added\n",
+      "600719 skipped\n",
+      "4450000 added\n",
+      "613274 skipped\n",
+      "4500000 added\n",
+      "622114 skipped\n",
+      "4550000 added\n",
+      "628521 skipped\n",
+      "4600000 added\n",
+      "634557 skipped\n",
+      "4650000 added\n",
+      "641941 skipped\n",
+      "4694975 added\n",
+      "650000 skipped\n",
+      "4700000 added\n",
+      "651723 skipped\n",
+      "4750000 added\n",
+      "670772 skipped\n",
+      "4800000 added\n",
+      "678945 skipped\n",
+      "4850000 added\n",
+      "685795 skipped\n",
+      "4900000 added\n",
+      "697550 skipped\n",
+      "4913669 added\n",
+      "700000 skipped\n",
+      "4950000 added\n",
+      "703941 skipped\n",
+      "5000000 added\n",
+      "711800 skipped\n",
+      "5050000 added\n",
+      "719957 skipped\n",
+      "5100000 added\n",
+      "730725 skipped\n",
+      "5150000 added\n",
+      "740347 skipped\n",
+      "5200000 added\n",
+      "749597 skipped\n",
+      "5201848 added\n",
+      "750000 skipped\n",
+      "5250000 added\n",
+      "757552 skipped\n",
+      "5300000 added\n",
+      "765234 skipped\n",
+      "5350000 added\n",
+      "771031 skipped\n",
+      "5400000 added\n",
+      "783513 skipped\n",
+      "5450000 added\n",
+      "794232 skipped\n",
+      "5467378 added\n",
+      "800000 skipped\n",
+      "5500000 added\n",
+      "810221 skipped\n",
+      "5550000 added\n",
+      "818823 skipped\n",
+      "5600000 added\n",
+      "826804 skipped\n",
+      "5650000 added\n",
+      "833491 skipped\n",
+      "5700000 added\n",
+      "840327 skipped\n",
+      "5750000 added\n",
+      "848365 skipped\n",
+      "5754919 added\n",
+      "850000 skipped\n",
+      "5800000 added\n",
+      "856937 skipped\n",
+      "5850000 added\n",
+      "866048 skipped\n",
+      "5900000 added\n",
+      "871984 skipped\n",
+      "5950000 added\n",
+      "881172 skipped\n",
+      "6000000 added\n",
+      "889780 skipped\n",
+      "6050000 added\n",
+      "897401 skipped\n",
+      "6068173 added\n",
+      "900000 skipped\n",
+      "6100000 added\n",
+      "905295 skipped\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_talk_pages = len(talk_array)\n",
+    "talk_pages_added = 0\n",
+    "talk_pages_skipped = 0\n",
+    "for i, row in enumerate(talk_array):\n",
+    "    title = row[1].decode(\"utf-8\")\n",
+    "    if len(title) > 200:\n",
+    "        continue # ignore titles > 200 chars\n",
+    "    result = s.query(Page).filter(Page.page_title==title).first()\n",
+    "    if result is None:\n",
+    "        talk_pages_skipped += 1\n",
+    "        if talk_pages_skipped % 50000 == 0:\n",
+    "            print(f\"{talk_pages_added} added\")\n",
+    "            print(f\"{talk_pages_skipped} skipped\")\n",
+    "        continue\n",
+    "    page = PageTalk(\n",
+    "        page_id = int(row[0]),\n",
+    "        page_title = title,\n",
+    "        )\n",
+    "    s.add(page)\n",
+    "    talk_pages_added += 1\n",
+    "    if talk_pages_added % 50000 == 0 or i == total_talk_pages - 1:\n",
+    "        s.commit()\n",
+    "        if i == total_talk_pages - 1:\n",
+    "            print(\"FINAL:\")\n",
+    "        print(f\"{talk_pages_added} added\")\n",
+    "        print(f\"{talk_pages_skipped} skipped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6132268\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "911509"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "print(talk_pages_added)\n",
+    "talk_pages_skipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
