processpool load pages, still using notebooks for qualities and links

--- a/database/load_qualities.ipynb
+++ b/database/load_qualities.ipynb
@@ -14,13 +14,16 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "pythonjvsc74a57bd0882153fd03ac0d222bc94fedf773bf8f9a8cd82a780b0b7c5acd37280592795e",
+   "name": "python3",
    "display_name": "Python 3.8.10 64-bit ('env': venv)"
   },
   "metadata": {
    "interpreter": {
     "hash": "882153fd03ac0d222bc94fedf773bf8f9a8cd82a780b0b7c5acd37280592795e"
    }
+  },
+  "interpreter": {
+   "hash": "882153fd03ac0d222bc94fedf773bf8f9a8cd82a780b0b7c5acd37280592795e"
   }
  },
  "nbformat": 4,
@@ -56,7 +59,14 @@
     "# Load Page Qualities\n",
     "\n",
     "522137 added\n",
-    "3691 skipped"
+    "3691 skipped\n",
+    "\n",
+    "## Something weird is happening with the way ids are being compared that's making a lot more skips than before. Need to figure that out eventually\n",
+    "\n",
+    "New numbers are:\n",
+    "FINAL:\n",
+    "445355 added\n",
+    "80473 skipped\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -67,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorylinks_array = np.load('data/categorylinks.npy', allow_pickle=True)\n"
+    "categorylinks_array = np.load('data/categorylinks.npy', allow_pickle=True)"
    ]
   },
   {
@@ -104,9 +114,7 @@
     "                print(f\"{num_unique_items} unique items\")\n",
     "    print(\"Total:\")\n",
     "    print(f\"scanned {num_items} items\")\n",
-    "    print(f\"{num_unique_items} unique items\")  \n",
-    "        \n",
-    "    "
+    "    print(f\"{num_unique_items} unique items\")   "
    ]
   },
   {
@@ -152,8 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sortFunc(e):\n",
-    "    return e[0]\n",
+    "def sortFunc(quality_list):\n",
+    "    return quality_list[0]\n",
     "\n",
     "qualities.sort(key=sortFunc)"
    ]
@@ -278,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,13 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Deleted\n",
       "50000 added\n",
       "226 skipped\n",
       "100000 added\n",
@@ -322,13 +333,17 @@
       "3537 skipped\n",
       "FINAL:\n",
       "522137 added\n",
-      "3691 skipped\n"
+      "3691 skipped\n",
+      "CPU times: user 4min 13s, sys: 13 s, total: 4min 26s\n",
+      "Wall time: 6min 8s\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
+    "%%time\n",
+    "s.query(PageQuality).delete()\n",
+    "s.commit()\n",
+    "print(\"Deleted\")\n",
     "total_qualities = len(unique_qualities)\n",
     "qualities_added = 0\n",
     "qualities_skipped = 0\n",
@@ -342,6 +357,7 @@
     "            print(f\"{qualities_added} added\")\n",
     "            print(f\"{qualities_skipped} skipped\")\n",
     "        continue\n",
+    "    # print(result)\n",
     "    quality = PageQuality(\n",
     "        page_id = row[0],\n",
     "        page_quality = row[1],\n",
@@ -358,22 +374,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<models.Page at 0x7fc924cc4af0>"
+       "3691"
       ]
      },
      "metadata": {},
-     "execution_count": 57
+     "execution_count": 14
     }
    ],
    "source": [
-    "s.query(Page).filter(Page.page_id==12).first()"
+    "len(skipped_qualities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<PageTalk: (\n",
+       "\tpage_id=128,\n",
+       "\tpage_title='Atlas Shrugged',\n",
+       "\t)>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "s.query(PageTalk).filter(PageTalk.page_id==128).first()"
    ]
   },
   {
